<resources>

    <!-- DEFAULT -->
    <string name="app_name">Time Tracker</string>

    <!-- Activities -->
    <string name="add_category">Add category</string>
    <string name="edit_category">Edit category</string>
    <string name="edit_categories">Edit categories</string>
    <string name="edit_activities">Edit activities</string>
    <string name="add_activity">Add activity</string>
    <string name="edit_activity">Edit activity</string>
    <string name="settings">Settings</string>
    <string name="timeline">Timeline</string>
    <string name="track_time">Track time</string>
    <string name="statistics">Statistics</string>
    <string name="add_time">Add time</string>

    <!-- Alert -->
    <string name="err_save_no_name_desc">You need to set a name before saving.</string>
    <string name="err_save_no_color_desc">You need to set a color before saving.</string>
    <string name="err_no_selected_activity">No selected activity.</string>
    <string name="q_discard_changes">Are you sure you want to discard changes?</string>
    <string name="q_delete_category">Are you sure you want to delete this category?</string>
    <string name="category_saved">Category saved</string>
    <string name="category_deleted">Category deleted</string>
    <string name="no_activities">No activities</string>
    <string name="select_category">Select category</string>
    <string name="select">Select</string>

    <string name="err_no_time_spent">You need to spend time before saving.</string>
    <string name="confirm_unfinished_save">Are you sure you want to save without spending all time?</string>

    <string name="q_delete_activity">Are you sure you want to delete this activity?</string>
    <string name="activity_saved">Category saved</string>
    <string name="activity_deleted">Category deleted</string>
    <string name="left_to_spend">%s left to spend on activities</string>
    <string name="what_have_you_been_up_to">What have you been up to lately?</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="successful_sign_in">Sign in successful!</string>
    <string name="successful_sign_out">Sign out successful!</string>

    <!-- Calendar -->
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="Today">Today</string>
    <string name="Yesterday">Yesterday</string>

    <!-- Buttons -->
    <string name="choose">Choose</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="chose_email_client">Choose an Email client</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="since">Since</string>

    <!-- Categories -->
    <string name="color">Color</string>
    <string name="name">Name</string>
    <string name="enter_category_name">Enter category name</string>
    <!-- Activities -->
    <string name="icon">Icon</string>
    <string name="category">Category</string>
    <string name="enter_activity_name">Enter activity name</string>

    <!-- Navigator -->
    <string name="sign_in">Sign in</string>
    <string name="nav_edit_category">Edit categories</string>
    <string name="nav_edit_activity">Edit activities</string>
    <string name="nav_about">Information</string>
    <string name="nav_communicate">Communication</string>
    <string name="nav_share">Share</string>
    <string name="nav_feedback">Feedback</string>
    <string name="sign_out">Sign out</string>

    <!-- Preferences -->
    <string name="pref_language">Language</string>
    <string name="default_language">Default</string>
    <string-array name="pref_language_list">
        <item>@string/default_language</item>
        <item>English</item>
        <item>Svenska</item>
        <item>Deutsch</item>
        <item>Français</item>
        <item>Português</item>
        <item>Español</item>
        <item>Pусский</item>
    </string-array>
    <string-array name="pref_language_values">
        <item>default</item>
        <item>en</item>
        <item>se</item>
        <item>de</item>
        <item>fr</item>
        <item>pt</item>
        <item>es</item>
        <item>ba</item>
    </string-array>
    <string name="title_activity_categories">CategoriesActivity</string>
    <string name="title_activity_time_line">TimeLineActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Options -->
    <string name="export_to_calendar">Export to Google Calendar</string>
    <string name="export_to_drive">Export to Google Drive</string>
</resources>
