<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sign_in"
            android:icon="@drawable/icons8_google"
            android:title="@string/sign_in" />
        <item
            android:id="@+id/nav_edit_category"
            android:icon="@drawable/category"
            android:title="@string/nav_edit_category" />
        <item
            android:id="@+id/nav_edit_activity"
            android:icon="@drawable/activities"
            android:title="@string/nav_edit_activity" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings" />
        <!--<item
            android:id="@+id/nav_about"
            android:icon="@drawable/baseline_info_24px"
            android:title="@string/nav_about" />-->
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/baseline_exit_to_app_24px"
            android:title="@string/sign_out"/>
    </group>

    <item android:title="@string/nav_communicate">
        <menu>
            <!--<item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share" />-->
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/mail"
                android:title="@string/nav_feedback" />
        </menu>
    </item>

</menu>
